[gd_scene load_steps=9 format=3 uid="uid://cnke1r63a4j8h"]

[ext_resource type="PackedScene" uid="uid://ds2oilyxtgj32" path="res://enemy/enemy_base/enemy_base.tscn" id="1_0drfv"]
[ext_resource type="Script" path="res://enemy/enemy_pan/enemy_pan.gd" id="2_mc1od"]
[ext_resource type="SpriteFrames" uid="uid://cdh7t8awamfpy" path="res://assets/enemies/enemy_pan.tres" id="3_mbgmx"]
[ext_resource type="PackedScene" uid="uid://dfhpogj6okv0e" path="res://components/health_bar_component.tscn" id="4_v8ooj"]
[ext_resource type="PackedScene" uid="uid://o7idubkhnsm0" path="res://components/health_component.tscn" id="5_er12s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vuogd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xj0v7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8g5or"]
size = Vector2(20, 10)

[node name="EnemyPan" instance=ExtResource("1_0drfv")]

[node name="EnemyBase" parent="." index="0"]
script = ExtResource("2_mc1od")
move_speed = 50.0

[node name="CollisionShape2D" parent="EnemyBase" index="0"]
shape = SubResource("RectangleShape2D_vuogd")

[node name="HurtBoxCollision" parent="EnemyBase/HurtBox" index="0"]
shape = SubResource("RectangleShape2D_xj0v7")

[node name="RemoteTransform2D" parent="EnemyBase" index="4"]
update_rotation = false
update_scale = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="EnemyBase" index="5"]
self_modulate = Color(1, 0, 0, 1)
sprite_frames = ExtResource("3_mbgmx")
animation = &"idle_right"

[node name="AttackBox" type="Area2D" parent="EnemyBase" index="6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyBase/AttackBox" index="0"]
position = Vector2(0, 15)
shape = SubResource("RectangleShape2D_8g5or")
debug_color = Color(0.941176, 0.117647, 0.533333, 0.419608)

[node name="AttackDelay" type="Timer" parent="EnemyBase" index="7"]
wait_time = 1.5
one_shot = true

[node name="HealthBarComponent" parent="." index="1" node_paths=PackedStringArray("health_component", "entity_reference") instance=ExtResource("4_v8ooj")]
health_component = NodePath("../HealthComponent")
entity_reference = NodePath("../EnemyBase")
y_offset = -100.0

[node name="HealthComponent" parent="." index="2" instance=ExtResource("5_er12s")]
current_health = 90.0

[connection signal="area_entered" from="EnemyBase/AttackBox" to="EnemyBase" method="_on_attack_box_area_entered"]
[connection signal="area_exited" from="EnemyBase/AttackBox" to="EnemyBase" method="_on_attack_box_area_exited"]
[connection signal="timeout" from="EnemyBase/AttackDelay" to="EnemyBase" method="_on_attack_delay_timeout"]
